{
    "name": "BuilderInputs",
    "maps": [
        {
            "name": "builder",
            "id": "86a1c836-6b3f-4af6-9f2a-0b530d6eb86e",
            "actions": [
                {
                    "name": "OnClicked",
                    "type": "Button",
                    "id": "d60f8f79-0243-4f43-9a79-4cff917a25e3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnHold",
                    "type": "Button",
                    "id": "21db327e-b2e9-46e1-abfe-02bf940efb96",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnAction",
                    "type": "Button",
                    "id": "17ab5bb6-0ed9-4b1a-b530-543dd5e81e48",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnExit",
                    "type": "Button",
                    "id": "5ab808e9-5ca5-4eab-9d3e-b439c0041aab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMoved",
                    "type": "Value",
                    "id": "a7e225c2-94ad-4c8b-be78-490ded8911ff",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnRightClick",
                    "type": "Button",
                    "id": "9e131e5e-1042-49f7-ab44-87915dead8fe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ecc492a-3f73-467c-b4fa-849f8c17160d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "OnClicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "132981ea-b3aa-4fba-afec-162a7150467c",
                    "path": "<Touchscreen>/touch0/tap",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "OnClicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ff5dc11-8b24-4dff-80fc-9ffa0977e7e1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "OnHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "734fcab0-f1fd-4d7c-a5ec-ce1c612cf24b",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "OnHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb4795db-8072-4d21-852b-bba65002a863",
                    "path": "<Keyboard>/#(P)",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "OnAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0de65f5a-6c9a-4013-b93b-7c4eaef0ad39",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bf33617-ca3c-4494-adab-6c9bc664c78c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnExit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6415d5b-ef35-465f-9a8e-fc9c4604cf45",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnExit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0b81207-f3e5-45f4-92c0-52c8d0fd82b7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMoved",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b49104f-5a8d-4dce-9a07-bf68f1171584",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMoved",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42562d38-fa00-4918-87a3-acf8d2a936dc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "OnRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "camera",
            "id": "ac5cb6cd-b88f-4d52-a19b-bcb95a7c1c2d",
            "actions": [
                {
                    "name": "zoom",
                    "type": "Value",
                    "id": "d2885748-1320-4889-ad56-0838ccfc6e42",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "move",
                    "type": "Value",
                    "id": "d7431411-606b-4eb2-8ea5-937269d05071",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "rotate",
                    "type": "Value",
                    "id": "ebc1dcf0-fb82-44f8-9335-ae8d6aa52d6e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "yaw",
                    "type": "Value",
                    "id": "4bb328b1-404b-48df-8df6-9a42ac06c31c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch0",
                    "type": "Value",
                    "id": "27c8654d-6035-466d-87e4-9d28c4ac58c2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch0_Activated",
                    "type": "Button",
                    "id": "7bd8e000-4489-4d79-a713-c1e17a27b6f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch1",
                    "type": "Value",
                    "id": "ff66d8ff-fe1b-4aa0-9bdd-20007cdca6da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch1_Activated",
                    "type": "Button",
                    "id": "28b0cd74-2d9f-4cb1-86b3-a3a4b620471e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StopMove",
                    "type": "Button",
                    "id": "fac21c01-dabd-4ef9-82b2-52702794d392",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b4b46525-fbf1-4cf1-b52d-9b633fa5d755",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "e2adb581-db63-4979-a290-0e810f8ae2f0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3bc93c92-7a28-406d-831a-6f2d2d844f58",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "Scale(factor=50)",
                    "groups": "",
                    "action": "zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4bc11598-93ae-4b7b-bcc1-9bdccfb8c71d",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "Scale(factor=50)",
                    "groups": "",
                    "action": "zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseSystem",
                    "id": "848aad5e-a65b-4bc8-9f98-9d34f38e4856",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "65a78445-ddaf-456d-b78c-88f7593e5fcf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "460ca82c-557c-4c02-b59c-387a45b55c02",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5c1f39c1-bc4f-4e76-b6dc-49221ff5f7dd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "MouseSystem",
                    "id": "0f2f96c7-ac92-42c7-8984-38ea9d1ea306",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "1dfa82f1-0848-4270-abeb-089da9136a4e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "8ddb2929-adb3-4579-abf8-778964d3e467",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ControllerSystem",
                    "id": "470396d5-4e0b-4f83-b53d-bd9acf081e96",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "6800dc8c-cb41-4545-a357-6e1ebb290241",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "2c3c4c0a-fe5b-4877-870d-fe3eac7a73c4",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseSystem",
                    "id": "a20da618-115a-4612-998a-bdbc3ed4d6c1",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "08bdcdf4-e1cf-49a1-bc55-65def5ec5700",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "b2abb568-76e9-4194-bb5c-9a8d3350bf45",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ControllerSystem",
                    "id": "abcb9b60-da04-466e-83c7-bf977fc9512b",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "6dbcf4b3-36d7-45a8-ab9d-ba9cd19fa7ae",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "be85f7eb-094e-4fdc-8fc5-cfbb00e18207",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4fd6b8a9-50ce-4be0-bc96-e14c7d049b07",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7a5f67b-b030-48c1-9438-1fe5e6422d28",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c697032b-7263-40eb-a6f2-468ceac68f65",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch0_Activated",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0baa164-5241-4623-852d-f4ad0ccba992",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a211d17d-317a-45fa-81c4-204b619731bb",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1_Activated",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68b70631-37fe-4baf-8c37-1ac662756d4d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StopMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}